# sillytui

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: release.yml
cmake/: mingw-windows.cmake
examples/: load_model.cc  qwen3_inference.c  tokenize.c
src/: character.c  character.h  chat.c  chat.h  config.c  config.h  history.c  history.h  llm.c  llm.h  macros.c  macros.h  main.c  markdown.c  markdown.h  modal.c  modal.h  persona.c  persona.h  sampler.c  sampler.h  ui.c  ui.h
src/character/: character.c  persona.c
src/chat/: chat.c  chat.h  history.c  history.h
src/core/: config.c  config.h  debug.h  fault.c  fault.h  macros.c  platform.h  time.c
src/inference/backend/: backend.h  caps.c  caps.h  registry.c  registry.h
src/inference/backend/accelerate/: accelerate_backend.c  accelerate_backend.h
src/inference/backend/cpu/amx/: amx_backend.c  amx_backend.h
src/inference/backend/cpu/neon/: neon_backend.c  neon_backend.h
src/inference/backend/cpu/scalar/: scalar_backend.c  scalar_backend.h
src/inference/core/: dtype.c  dtype.h  error.c  error.h  tensor.c  tensor.h
src/inference/kernels/activation/: activation.c  activation_neon.c
src/inference/kernels/attention/: attention.c  attention.h  attention_neon.c
src/inference/kernels/embedding/: embedding_neon.c
src/inference/kernels/gemm/: gemm.c  gemm_amx.c  gemm_neon.c
src/inference/kernels/kv_cache/: kv_cache_neon.c
src/inference/kernels/norm/: layernorm.c  layernorm_neon.c
src/inference/kernels/rope/: rope.c  rope_neon.c
src/inference/kernels/sampling/: sampling.c  sampling.h  sampling_kernels.h  sampling_neon.c
src/inference/kernels/softmax/: softmax.c  softmax.h  softmax_kernels.h  softmax_neon.c
src/inference/linalg/: layernorm.c  layernorm_neon.c
src/inference/model/: attention_layer.c  base.c  base.h  config.c  config.h  ffn.c  qwen3.c  qwen3.h  registry.c  registry.h  transformer_layer.c  transformer_layer.h  weights.c  weights.h
src/inference/model/common/: attention.c  attention.h  ffn.c  ffn.h  transformer.c  transformer.h
src/inference/model/qwen3/: attention_layer.c  attention_layer.h  ffn.c  ffn.h  qwen3.c  qwen3.h  transformer_layer.c  transformer_layer.h  weights.c  weights.h
src/inference/model_loader/: safetensors.hh
src/inference/ops/: activation.h  embedding.h  gemm.h  kv_cache.h  norm.h  ops.h  rope.h  sampling.h
src/inference/tokenizer/: selector.c  sentencepiece.c  sentencepiece.h  simd.c  simd.h  simd_arm64.S  simd_x86_64.S  tiktoken.c  tiktoken.h  unicode_tables.c
src/llm/: common.c  common.h  llm.c  llm.h  sampler.c  sampler.h
src/llm/backends/: anthropic.c  backend.h  kobold.c  openai.c
src/lore/: lorebook.c
src/tokenizer/: gpt2bpe.c  gpt2bpe.h  selector.h  sentencepiece.c  simd.c  simd.h  simd_arm64.S  simd_x86_64.S  tiktoken.c  tokenizer.c  unicode_tables.c
src/ui/: markdown.c  modal.c  modal.h  ui.c  ui.h
src/ui/syntax/: syntax_ncurses.c  syntax_ncurses.h
src/ui/syntax/c/: hashtable.c  hashtable.h  highlight.c  highlight.h
src/ui/syntax/ulight/include/ulight/: ulight.h
src/ui/syntax/ulight/include/ulight/impl/: platform.h
tests/: run_all_tests.c  run_tests.c  test_activation_pytorch_accuracy.cc  test_attachments.c  test_config.c  test_framework.h  test_gemm.cc  test_gemm_pytorch_accuracy.cc  test_history.c  test_layernorm.cc  test_macros.c  test_modal.c  test_robustness.c  test_rope_pytorch_accuracy.cc  test_safetensors.cc  test_sampler.c  test_sampling_pytorch_accuracy.cc  test_simd.c  test_softmax_pytorch_accuracy.cc  test_struct_sizes.c  test_tokenizer.c  test_tokenizer_selector.c
tests/boundary/: test_boundary.c
tests/fuzz/: fuzz_gpt2bpe.c  fuzz_tiktoken.c
tests/generators/: gen_config_tests.c  gen_edge_case_tests.c  gen_history_tests.c  gen_macro_tests.c  gen_pretokenize_tests.c  gen_sampler_tests.c  gen_simd_tests.c  gen_unicode_tests.c  gen_utf8_tests.c
tests/integration/: run_integration_tests.c  test_chat_integration.c  test_config_integration.c  test_helper.h  test_persona_integration.c  test_tokenizer_integration.c
tests/oom/: test_oom.c
tests/property/: property_tests.h  test_property.c
tests/stress/: test_stress.c
tools/: setup_gcc13.sh
